--- a/gamecontrols.ui
+++ b/gamecontrols.ui
@@ -33,7 +33,7 @@
   </property>
   <property name="font">
    <font>
-    <family>Dyuthi</family>
+    <family>Chalkboard SE</family>
     <pointsize>14</pointsize>
    </font>
   </property>
@@ -66,7 +66,7 @@
        <widget class="QLabel" name="label_2">
         <property name="font">
          <font>
-          <family>Dyuthi</family>
+          <family>Chalkboard SE</family>
           <pointsize>16</pointsize>
           <weight>75</weight>
           <bold>true</bold>
@@ -84,7 +84,7 @@
        <widget class="QLabel" name="label_3">
         <property name="font">
          <font>
-          <family>Dyuthi</family>
+          <family>Chalkboard SE</family>
           <pointsize>16</pointsize>
           <weight>75</weight>
           <bold>true</bold>
@@ -106,7 +106,7 @@
        <widget class="QLabel" name="label_4">
         <property name="font">
          <font>
-          <family>Dyuthi</family>
+          <family>Chalkboard SE</family>
           <pointsize>14</pointsize>
          </font>
         </property>
@@ -137,7 +137,7 @@
        <widget class="QLabel" name="label_5">
         <property name="font">
          <font>
-          <family>Dyuthi</family>
+          <family>Chalkboard SE</family>
           <pointsize>14</pointsize>
          </font>
         </property>
@@ -168,7 +168,7 @@
        <widget class="QLabel" name="label_6">
         <property name="font">
          <font>
-          <family>Dyuthi</family>
+          <family>Chalkboard SE</family>
           <pointsize>14</pointsize>
          </font>
         </property>
@@ -199,7 +199,7 @@
        <widget class="QLabel" name="label_7">
         <property name="font">
          <font>
-          <family>Dyuthi</family>
+          <family>Chalkboard SE</family>
           <pointsize>14</pointsize>
          </font>
         </property>
@@ -232,7 +232,7 @@
      <x>110</x>
      <y>220</y>
      <width>228</width>
-     <height>32</height>
+     <height>36</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -240,7 +240,7 @@
      <widget class="QPushButton" name="cancelButton">
       <property name="font">
        <font>
-        <family>Dyuthi</family>
+        <family>Chalkboard SE</family>
         <pointsize>14</pointsize>
        </font>
       </property>
@@ -253,7 +253,7 @@
      <widget class="QPushButton" name="okButton">
       <property name="font">
        <font>
-        <family>Dyuthi</family>
+        <family>Chalkboard SE</family>
         <pointsize>14</pointsize>
        </font>
       </property>
