--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
   </property>
   <property name="font">
    <font>
-    <family>Dyuthi</family>
+    <family>Chalkboard SE</family>
     <pointsize>14</pointsize>
     <kerning>true</kerning>
    </font>
@@ -77,7 +77,7 @@
       <x>280</x>
       <y>420</y>
       <width>281</width>
-      <height>32</height>
+      <height>36</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -85,7 +85,7 @@
       <widget class="QPushButton" name="startButton">
        <property name="font">
         <font>
-         <family>Dyuthi</family>
+         <family>Chalkboard SE</family>
          <pointsize>14</pointsize>
          <kerning>true</kerning>
         </font>
@@ -102,7 +102,7 @@
       <widget class="QPushButton" name="pauseButton">
        <property name="font">
         <font>
-         <family>Dyuthi</family>
+         <family>Chalkboard SE</family>
          <pointsize>14</pointsize>
          <kerning>true</kerning>
         </font>
@@ -179,7 +179,7 @@
       <widget class="QLabel" name="label_game">
        <property name="font">
         <font>
-         <family>Dyuthi</family>
+         <family>Chalkboard SE</family>
          <pointsize>16</pointsize>
          <weight>75</weight>
          <bold>true</bold>
@@ -203,7 +203,7 @@
         <widget class="QLabel" name="game_count_1">
          <property name="font">
           <font>
-           <family>Dyuthi</family>
+           <family>Chalkboard SE</family>
            <pointsize>14</pointsize>
            <kerning>true</kerning>
           </font>
@@ -220,7 +220,7 @@
         <widget class="QLabel" name="game_count_sep">
          <property name="font">
           <font>
-           <family>Dyuthi</family>
+           <family>Chalkboard SE</family>
            <pointsize>14</pointsize>
            <kerning>true</kerning>
           </font>
@@ -237,7 +237,7 @@
         <widget class="QLabel" name="game_count_2">
          <property name="font">
           <font>
-           <family>Dyuthi</family>
+           <family>Chalkboard SE</family>
            <pointsize>14</pointsize>
            <kerning>true</kerning>
           </font>
@@ -260,7 +260,7 @@
       <x>290</x>
       <y>20</y>
       <width>181</width>
-      <height>131</height>
+      <height>136</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_6" stretch="1,4">
@@ -268,7 +268,7 @@
       <widget class="QLabel" name="label_7">
        <property name="font">
         <font>
-         <family>Dyuthi</family>
+         <family>Chalkboard SE</family>
          <pointsize>16</pointsize>
          <weight>75</weight>
          <italic>false</italic>
@@ -295,7 +295,7 @@
           <widget class="QLabel" name="label">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -309,7 +309,7 @@
           <widget class="QLabel" name="label_2">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -323,7 +323,7 @@
           <widget class="QLabel" name="label_3">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -341,7 +341,7 @@
           <widget class="QLabel" name="player_1_points">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -358,7 +358,7 @@
           <widget class="QLabel" name="player_1_lines">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -375,7 +375,7 @@
           <widget class="QLabel" name="player_1_swap">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -408,7 +408,7 @@
       <widget class="QLabel" name="label_8">
        <property name="font">
         <font>
-         <family>Dyuthi</family>
+         <family>Chalkboard SE</family>
          <pointsize>16</pointsize>
          <weight>75</weight>
          <italic>false</italic>
@@ -435,7 +435,7 @@
           <widget class="QLabel" name="label_4">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -449,7 +449,7 @@
           <widget class="QLabel" name="label_5">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -463,7 +463,7 @@
           <widget class="QLabel" name="label_6">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -481,7 +481,7 @@
           <widget class="QLabel" name="player_2_points">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -501,7 +501,7 @@
           <widget class="QLabel" name="player_2_lines">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -518,7 +518,7 @@
           <widget class="QLabel" name="player_2_swap">
            <property name="font">
             <font>
-             <family>Dyuthi</family>
+             <family>Chalkboard SE</family>
              <pointsize>14</pointsize>
              <kerning>true</kerning>
             </font>
@@ -544,7 +544,7 @@
      <x>0</x>
      <y>0</y>
      <width>840</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuSettings">
